--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,3 @@
-/* Genel stil ayarları */
 body {
     font-family: serif; /* Klasik serif yazı tipi */
     line-height: 1.6;
@@ -56,13 +55,14 @@ header nav ul {
 
 header nav ul li {
     display: inline;
-    margin-left: 20px; /* Aralığı 40px'den 20px'ye düşürdüm */
+    margin-left: 40px;
     padding: 10px;
     position: relative;
 }
 
 header nav ul li.current a {
-    font-weight: bold; /* Renk tanımlaması kaldırıldı, mevcut sayfa zaten siyah olarak kalacak */
+    color: black; /* Şu anki sayfa bağlantı metin rengi siyah */
+    font-weight: bold;
 }
 
 header nav ul li a:hover {
