--- a/styles.css
+++ b/styles.css
@@ -1,11 +1,11 @@
 body {
-    font-family: serif; /* Klasik serif yazı tipi */
+    font-family: serif;
     line-height: 1.6;
     margin: 0;
     padding: 0;
-    background-color: white; /* Arka plan beyaz */
-    color: black; /* Metin rengi siyah */
-    font-size: 18px; /* Tüm içerikler için font boyutu */
+    background-color: white;
+    color: black;
+    font-size: 18px;
 }
 
 .container {
@@ -15,15 +15,15 @@ body {
 }
 
 header {
-    background: white; /* Header arka planı beyaz */
+    background: white;
     padding-top: 30px;
     min-height: 70px;
-    border-bottom: 3px solid #bfbfbf; /* Alt çizgi açık gri */
+    border-bottom: 3px solid #bfbfbf;
     position: relative;
 }
 
 header a {
-    color: black; /* Header içindeki bağlantı metin rengi siyah */
+    color: black;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
@@ -61,12 +61,12 @@ header nav ul li {
 }
 
 header nav ul li.current a {
-    color: black; /* Şu anki sayfa bağlantı metin rengi siyah */
+    color: black;
     font-weight: bold;
 }
 
 header nav ul li a:hover {
-    color: #666; /* Bağlantı üzerine gelindiğinde koyu gri */
+    color: #666;
 }
 
 section {
@@ -102,9 +102,9 @@ section {
     width: 100%;
     margin-bottom: 10px;
     border: 1px solid #ccc;
-    border-radius: 5px; /* Köşeleri hafif yuvarlak yapmak için */
+    border-radius: 5px;
     font-size: 16px;
-    transition: border-color 0.3s; /* Animasyon eklemek için */
+    transition: border-color 0.3s;
 }
 
 #contact textarea {
@@ -118,7 +118,7 @@ section {
     border: 0;
     padding: 10px;
     cursor: pointer;
-    border-radius: 5px; /* Köşeleri hafif yuvarlak yapmak için */
+    border-radius: 5px;
     transition: background 0.3s;
 }
 
@@ -129,15 +129,47 @@ section {
 #contact input[type="text"]:focus,
 #contact input[type="email"]:focus,
 #contact textarea:focus {
-    border-color: #666; /* Odaklandığında sınır rengini değiştirin */
+    border-color: #666;
 }
 
 footer {
-    background: white; /* Footer arka planı beyaz */
-    color: black; /* Footer metin rengi siyah */
+    background: white;
+    color: black;
     text-align: center;
     padding: 10px;
-    position: relative; /* Footer'ı sabit olmaktan çıkarın */
+    position: relative;
     bottom: 0;
     width: 100%;
+}
+
+.certificates-grid {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    gap: 20px;
+    margin-top: 20px;
+}
+
+.certificate {
+    background: #f4f4f4;
+    padding: 20px;
+    border: 1px solid #ddd;
+    border-radius: 5px;
+    text-align: center;
+    transition: background 0.3s, border-color 0.3s;
+}
+
+.certificate:hover {
+    background: #e9e9e9;
+    border-color: #ccc;
+}
+
+.certificate-content {
+    display: none;
+    margin-top: 10px;
+}
+
+.certificate-content img {
+    width: 100%;
+    height: auto;
+    border-radius: 5px;
 }
